--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -63,7 +63,7 @@
                 <a href="https://elephas.fr/fr/conditions-dexpedition-retours/"> Livraisons et Retours </a>
                 &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; 
                 <a href="https://pixelsior.fr/">© copyright pixelsior 2022 </a>
-                &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;   ELEPHAS Paris®   &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;   Tous droits réservé
+                &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;   ELEPHAS Paris®   &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;   Tous droits réservés
             </div>
         </div>
     </div>
