--- a/templates/home/checkout.html.twig
+++ b/templates/home/checkout.html.twig
@@ -28,11 +28,17 @@
                 </div>
             </div>
         </div> #}
+        
         <div class="gdlr-core-pbf-wrapper " style="padding: 60px 0px 100px 0px;">
             <div class="gdlr-core-pbf-background-wrap" style="background-color: #f5f5f5 ;"></div>
             <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                 <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container ">
                     {{form_start(form, {attr: {id: 'form-payment'}})}}
+                    {% for label, messages in app.flashes %}
+                        {% for message in messages %}
+                            <div class="alert alert-{{label}}">{{ message | raw }}</div>
+                        {% endfor %}
+                    {% endfor %}
                     <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
                         <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="padding: 50px 20px 0px 20px;">
                             <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
