--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -38,7 +38,7 @@
                                         <div class="gdlr-core-title-item-title-wrap ">
                                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
                                                 style="font-size: 50px;font-weight: 300;letter-spacing: 0px;text-transform: uppercase; color: #fff;">
-                                                OFFRE UN COFFRET RARE : UNE BEAUTE EXPERTE & ENGAGEE POUR LA VIE<br> SAUVAGE
+                                                OFFRE UN COFFRET RARE : UNE BEAUTÉ EXPERTE & ENGAGÉE POUR LA VIE<br> SAUVAGE
                                                 <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3></div>
                                     </div>
                                 </div>
@@ -83,7 +83,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 25px;">
                                         <div class="gdlr-core-title-item-title-wrap ">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 25px;font-weight: 100;letter-spacing: 0px;text-transform: uppercase;">UNE ROUTINE BEAUTE ANTI-POLLUTION EXPERTE .<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3>
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 25px;font-weight: 100;letter-spacing: 0px;text-transform: uppercase;">UNE ROUTINE BEAUTÉ ANTI-POLLUTION EXPERTE .<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3>
                                             <p>Un coffret de 3 soins visage experts bio pour protéger la peau au quotidien de la pollution et prévenir du vieillissement prématuré. </p>
                                         </div>
                                     </div>
@@ -208,7 +208,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 25px;">
                                         <div class="gdlr-core-title-item-title-wrap ">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 25px;font-weight: 100;letter-spacing: 0px;text-transform: uppercase;">TA BEAUTE, TON ACTION POUR LA SURVIE D’UNE ESPÈCE MENACÉE !<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3>
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 25px;font-weight: 100;letter-spacing: 0px;text-transform: uppercase;">TA BEAUTÉ, TON ACTION POUR LA SURVIE D’UNE ESPÈCE MENACÉE !<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3>
                                             <p class="mt-4">Tes achats participent à nos actions concrètes pour la conservation des éléphants !</p>
                                         </div>
                                     </div>
