--- a/templates/home/checkout.html.twig
+++ b/templates/home/checkout.html.twig
@@ -272,9 +272,19 @@
                                                         </tr>
                                                         
                                                         <tr>
-                                                        <td colspan="2" ><span style="font-weight: bold">Montant total</span></td>
+                                                        <td colspan="2" ><span style="font-weight: bold">Prix net (sans TVA)</span></td>
+                                                        <td id="total-amount-ht">{{((coffret.prix * order.qteCoffret) / (1.0 + configTva/100)) | format_currency(my_currency, {}, locale)}}</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td colspan="2" ><span style="font-weight: bold">TVA ({{configTva | number_format(0, ',', ' ')}} %)</span></td>
+                                                        <td id="tva-amount">{{((coffret.prix * order.qteCoffret) * configTva / (100 + configTva)) | format_currency(my_currency, {}, locale)}}</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td colspan="2" ><span style="font-weight: bold">Prix total (TVA incluse)</span></td>
                                                         <td id="total-amount">{{(coffret.prix * order.qteCoffret) | format_currency(my_currency, {}, locale)}}</td>
                                                         </tr>
+
+                                                        
                                                     </tbody>
                                                 </table>
                                                 {% if not payment %}
@@ -357,16 +367,21 @@
 {% block javascripts %}
     {{ parent() }}
     <script type="text/javascript">
+        let configTva = {{configTva}};
         function formatPrix(prix){
             let text = new Intl.NumberFormat('fr-FR', { style: 'currency', currency: 'EUR' }).format(prix);
             return text;
         }
         function refreshTotal(elmt){
             let totalDom = document.getElementById('total-amount');
+            let tvaDom = document.getElementById('tva-amount');
+            let totalHtDom = document.getElementById('total-amount-ht');
             let prix = {{coffret.prix}};
             let qte = elmt.value;
             let total = prix * qte;
             totalDom.innerHTML = formatPrix(total);
+            tvaDom.innerHTML = formatPrix(total * configTva / (100 + configTva));
+            totalHtDom.innerHTML = formatPrix(total / (1.0 + configTva/100));
         }
     </script>
     {% if payment %}
