Title et description

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="title" content="Elephas Paris - Coffrets cosmétiques bio et écologique">
-        <meta name="description" content="Découvrez notre coffret cadeau cosmétique bio et à zéro déchet. Gâtez-vous ou vos proches avec des produits naturels, efficaces et écologiques !">
+        <meta name="description" content="Découvrez un coffret cadeau rare, de Haute cosmétique bio, vegan, sans huile de palme et aux impacts reconnus pour la survie des éléphants. Des soins naturels experts et en packs minimalistes, pour une éco-responsabilité ultime !">
 
         {% block metas %}{% endblock %}
         <title>{% block title %}Elephas{% endblock %}</title>
