--- a/templates/home/checkout.html.twig
+++ b/templates/home/checkout.html.twig
@@ -362,6 +362,9 @@
         </div> #}
     </div>
 </div>
+
+<input type="hidden" id="stripe_clientSecret" value="{{ stripeIntentSecret }}">
+
 {% endblock %}
 
 {% block javascripts %}
@@ -390,6 +393,8 @@
         
         
         $(document).ready(function () {
+            var clientSecret = $('input#stripe_clientSecret').val();
+
             var form = document.getElementById('form-payment');
             var errors = document.getElementById('card-errors');
             var cardElement = document.getElementById('card-element');
@@ -412,15 +417,28 @@
             
             function submitForm(event){
                 event.preventDefault();
-                stripe.createToken(card).then(function(result) {
+            //     stripe.createToken(card).then(function(result) {
+            //         if (result.error) {
+            //             errors.textContent = result.error.message;
+            //             form.classList.add('has-error');
+            //         } else {
+            //             document.getElementById('{{form.token.vars.id}}').setAttribute('value', result.token.id);
+            //             $('#form-payment').submit();
+            //         }
+            //     });
+
+                stripe.handleCardPayment(
+                    clientSecret,
+                    card
+                ).then((result) => {
                     if (result.error) {
                         errors.textContent = result.error.message;
                         form.classList.add('has-error');
-                    } else {
-                        document.getElementById('{{form.token.vars.id}}').setAttribute('value', result.token.id);
+                    }else if('paymentIntent' in result){
+                        // document.getElementById('{{form.token.vars.id}}').setAttribute('value', result.token.id);
                         $('#form-payment').submit();
                     }
-                });
+                })  
             }
 
             $('#btn-pay').click(submitForm);
