Admin : Affichage rue order coffret

--- a/templates/admin/order/admin_order_details.html.twig
+++ b/templates/admin/order/admin_order_details.html.twig
@@ -63,6 +63,10 @@
                                         <label>Adresse de facturation<span>*</span></label>
                                         <input type="text" name="address" value="{{order.info.lot}}" disabled/>
                                     </div>
+                                     <div class="col-6 mb-20">
+                                        <label>Rue <span>*</span></label>
+                                        <input type="text" name="postal_code" value="{{order.info.rue}}" disabled/>
+                                    </div>
                                     <div class="col-6 mb-20">
                                         <label>Ville <span>*</span></label>
                                         <input type="text" name="postal_code" value="{{order.info.ville}}" disabled/>
