--- a/templates/admin/order/admin_order_details.html.twig
+++ b/templates/admin/order/admin_order_details.html.twig
@@ -68,6 +68,10 @@
                                         <input type="text" name="postal_code" value="{{order.info.rue}}" disabled/>
                                     </div>
                                     <div class="col-6 mb-20">
+                                        <label>Code Postal <span>*</span></label>
+                                        <input type="text" name="postal_code" value="{{order.info.codePostal}}" disabled/>
+                                    </div>
+                                    <div class="col-6 mb-20">
                                         <label>Ville <span>*</span></label>
                                         <input type="text" name="postal_code" value="{{order.info.ville}}" disabled/>
                                     </div>
