Admin : Information commande coffret

--- a/templates/admin/order/admin_order_details.html.twig
+++ b/templates/admin/order/admin_order_details.html.twig
@@ -45,6 +45,10 @@
                                         <label>Prénom <span>*</span></label>
                                         <input type="text" name="firstname" value="{{order.info.prenom}}" disabled/>
                                     </div>
+                                    <div class="col-12 mb-20">
+                                        <label>Nom de l'entrepise</label>
+                                        <input type="text" name="firstname" value="{{order.info.nomEntreprise}}" disabled/>
+                                    </div>
                                     <div class="col-lg-6 mb-20">
                                         <label>Téléphone<span>*</span></label>
                                         <input type="text" name="phone" value="{{order.info.telephone}}" disabled/>
@@ -74,6 +78,10 @@
                                     <div class="col-6 mb-20">
                                         <label>Ville <span>*</span></label>
                                         <input type="text" name="postal_code" value="{{order.info.ville}}" disabled/>
+                                    </div>
+                                    <div class="col-6 mb-20">
+                                        <label>Province/département<span>*</span></label>
+                                        <input type="text" name="postal_code" value="{{order.info.provinceDepartement}}" disabled/>
                                     </div>
                                     <div class="col-12">
                                         <div class="order-notes">
