--- a/templates/partials/header_mobile.html.twig
+++ b/templates/partials/header_mobile.html.twig
@@ -2,7 +2,7 @@
     <div class="kleanity-mobile-header kleanity-header-background kleanity-style-slide background-white" id="kleanity-mobile-header">
         <div class="kleanity-mobile-header-container kleanity-container">
             <div class="elephas-logo d-flex align-items-center justify-content-center">
-                <a href="#"><img src="{{asset('assets/utils/images/logo.png')}}" alt="Elephas logo" ></a>
+                <a href="{{ path('app_home') }}"><img src="{{asset('assets/utils/images/logo.png')}}" alt="Elephas logo" ></a>
             </div>
             {# <div class="kleanity-logo  kleanity-item-pdlr">
                 <div class="kleanity-logo-inner">
