--- a/templates/partials/header_redacteur.html.twig
+++ b/templates/partials/header_redacteur.html.twig
@@ -56,7 +56,7 @@
             <div class="header_top">
                 <div class="container">
                     <div class="row align-items-center header-logo-container">
-                        <a href="#" class="d-flex justify-content-center align-items-center"><img class="header-logo" src="{{ asset('assets/img/home/af_logo_d2.png') }}" alt="Logo Aroma forest"></a>
+                        <a href="{{ path('app_redacteur_blog_index') }}" class="d-flex justify-content-center align-items-center"><img class="header-logo" src="{{ asset('assets/utils/images/logo.png') }}" alt="Logo Elephas"></a>
                     </div>
                 </div>
             </div>
