--- a/templates/base_popup_admin.html.twig
+++ b/templates/base_popup_admin.html.twig
@@ -13,7 +13,7 @@
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
             <!-- Favicon -->
-            <link rel="shortcut icon" type="image/x-icon" href="{{ asset('assets/img/af_logo.png') }}">
+            {# <link rel="shortcut icon" type="image/x-icon" href="{{ asset('assets/img/af_logo.png') }}"> #}
 
             <!-- CSS
             ========================= -->
