Current copyright year

--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -62,7 +62,7 @@
                 &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
                 <a href="https://elephas.fr/fr/conditions-dexpedition-retours/"> Livraisons et Retours </a>
                 &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; 
-                <a href="https://pixelsior.fr/">© copyright pixelsior 2022 </a>
+                <a href="https://pixelsior.fr/">© copyright pixelsior <span id="copyright_year">{{ 'now' | date('Y') }}</span> </a>
                 &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;   ELEPHAS Paris®   &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;   Tous droits réservés
             </div>
         </div>
